# cortex

./: .env.example  .gitignore  README.md  evaluation_report_20260115_104341.json  main.py  pyproject.toml  scenario_evaluation_report_20260116_081322.json  scenario_evaluation_report_20260116_081322.md  test.json  test.py
.cortex/indexing/: state.db
agents/: base.py  orchestrator.py  reranker.py  tools.py
agents/subagents/: __init__.py  builder.py  explorer.py  general.py  planner.py
app/: config.py  main.py
chroma/: chroma.sqlite3
core/: config.py
embeddings/: base.py  ollama.py  openai.py
indexing/: indexer.py  state.db  state.py
ingestion/: pipeline.py  watcher.py
ingestion/chunking/: __init__.py  base.py  code.py  router.py  text.py
ingestion/loaders/: base.py  document.py  filesystem.py  github.py
llm/: base.py  factory.py  ollama.py  openai.py
scripts/: EVALUATION_README.md  demo_evaluation.py  evaluate_agent.py  evaluate_scenarios.py  evaluate_tools.py  install_models.sh  run_scenario_evaluation.py  test_agent.py  test_chat_fix.py  test_github_integration.py  test_lsp.py
vectorstore/: chroma.py
